--- a/image-gallery.css
+++ b/image-gallery.css
@@ -57,7 +57,7 @@ img{
     transition: 1s ease-in-out;
 }
 img:hover{
-    transform: scale(1) rotate(-360deg);
+   transform: scale(1) rotate(-45deg)     
 }
 @media (max-width:1000px){
     .one{
